# wara

./: .gitignore  GUI-TODO.txt  LICENSE  README.md  pyproject.toml
examples/: example_add_peaks.py  example_add_peaks_energy.py  example_advfit_area_bkg.py  example_auto_scan.py  example_diagnostics.py  example_efficiency.py  example_mca_pixie.py  example_read_tlist.py  example_read_trace_data_pixie.py  example_save_peaks_to_hdf.py  example_tlist.py  read-peaks-df.py
examples/data/: CeBr_Co-60.txt
examples/energy_calibration/: example_ecal.py  example_ecal_nonlinear.py  example_smart_cal.py  test_piecewise.py
examples/file_reader/: example_file_reader.py  example_read_and_save.py
examples/other/: example_add_peaks_energy.py  example_apicalc.py  example_decay_exp.py  example_diagnostics.py  example_efficiency.py  example_read_tlist_decay_exp.py  example_tlist.py
examples/peakfit/: example_advfit_area_bkg.py  example_auto_scan.py  example_chi2_optimizer.py  example_peakfit.py
examples/peaksearch/: example_peaksearch_cebr.py  example_peaksearch_hpge.py
examples/pixie/: example_mca_pixie.py
scratch/: test_advanced_fit_PeakAreaLinearBkg.py
tests/: test_apicalc.py  test_decay_exponential.py  test_energy_calibration.py  test_file_reader.py  test_peakfit.py  test_peaksearch.py  test_spectrum.py
wara/: advanced_fit.py  apicalc.py  cnf_reader.py  decay_exponential.py  diagnostics.py  efficiency.py  energy_calibration.py  file_reader.py  gui.py  helper_api.py  param_handle.py  parse_NIST.py  peakfit.py  read_parquet_api.py  resolution.py  spectrum.py
(+42 files in other folders)
