[build-system]
requires = ["setuptools>=64", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "wara"
dynamic = ["version"]
description = "Gamma spectroscopy tools"
readme = "README.md"
authors = [
    {name = "Mauricio Ayllon Unzueta", email = "mauri.ayllon12@gmail.com"},
]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "docopt >= 0.6.2",
    "lmfit > 1.0.2",
    "dateparser >= 1.1.1",
    "pandas > 1.4.2",
    "matplotlib >= 3.6.3",
    "mplcursors >= 0.5.2",
    "pyarrow >= 11.0.0",
    "natsort >= 7.1.1",
    "plotly >= 5.22.0",
    "scipy >= 1.9.3",
    "PyQtWebEngine",
    "msgspec",
    "bitstruct",
]

[project.urls]
Homepage = "https://github.com/mauricioAyllon/wara"

[project.scripts]
wara = "wara.gui:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["wara*"]

[tool.setuptools.package-data]
wara = ["nuclear-data/*.txt", "nuclear-data/*.csv", "ui/*.ui"]

[tool.setuptools_scm]
write_to = "wara/version.py"
